@@ -356,7 +356,6 @@ item.alfheim:ElvenFood6.name=Jellyfish Jelly
 item.alfheim:ElvenFood7.name=Jelly Sandwich
 item.alfheim:ElvenFood8.name=Fish in Jellyfish Jelly
 item.alfheim:ElvenFood9.name=Dreamberry
-item.alfheim:ElvenFertilizer.name=Elven Fertilizer
 item.alfheim:ElvoriumIngot.name=Elvorium Ingot
 item.ElvoriumLeggings.name=Elvorium Leggings
 item.alfheim:ElvoriumNugget.name=Elvorium Nugget
