@@ -356,7 +356,6 @@ item.alfheim:ElvenFood6.name=Желе медузы
 item.alfheim:ElvenFood7.name=Желеброд
 item.alfheim:ElvenFood8.name=Рыба в желе медузы
 item.alfheim:ElvenFood9.name=Ягода мечтаний
-item.alfheim:ElvenFertilizer.name=Эльфийское удобрение
 item.alfheim:ElvoriumIngot.name=Слиток эльвория
 item.ElvoriumLeggings.name=Поножи из эльвория
 item.alfheim:ElvoriumNugget.name=Самородок эльвория
