@@ -555,6 +555,7 @@ alfheim.tagline.soulSword=As good as Muramasa's blade
 alfheim.page.soulSword0=Terra Blade is an excellent weapon, sharp and durable, but it has a big drawback... It limits the natural gift of living beings for self-development. Fortunately, the divine essence can radically transform the main material of a Terra Blade - terrasteel, giving birth to a weapon of infinite potential.
 alfheim.page.soulSword1=The fusion of terrasteel - a metal symbolizing the original Midgard, and Gaia Spirit Ingot - the essence of great power, gives rise to a blade that absorbs the souls of the victims and is strengthened by them.
 alfheim.page.soulSword2=Creating &1Soul Sword&0
+alfheim.page.soulSword3=To repair it you can simply Sneak-rightclick it in the air with some &1Gaia Spirit&0 in your inventory.
 
 alfheim.entry.goddessCharm=Benevolent Goddess' Charm
 alfheim.tagline.goddessCharm=Prevents explosions from damaging the world
@@ -1053,7 +1054,7 @@ alfheim.entry.fenrirDrop=Fenrir's Gifts
 alfheim.tagline.fenrirDrop=Victorious's Rewards
 alfheim.page.fenrirDrop0=The Great Wolf will endow the hero with his gifts and there will be no one stronger... Each of these relics is evidence of the strength and antiquity of Fenrir, the great wolf, personifying invincibility and power. Whoever wields them gains the ability to become the embodiment of nature's harshest fury and unsurpassed skill in battle.
 alfheim.page.fenrirDrop1=&1Hati's Eye&0: the blinding moonlight from this relic pierces the darkness of the night, illuminating dark corners and secret paths. Its rays meet the eyes of enemies, depriving them of vision and dooming them to hopeless ferment in the dark. The owner of this relic becomes the personification of light, impervious to shadows and a silent hunter in the dark.
-alfheim.page.fenrirDrop2=&1Skoll's Bane&0 is a relic that shines with the power of the sun. Its whole essence is permeated with fiery rays that can kindle life even in the most desolate hearts. Skoll's beams pierce the undead with double the force, their blazing fire engulfing enemies, draining their vitality and burning them to their very core. One who wields the Skoll's Bane becomes an invincible paladin of light, capable of blinding villains with its divine brilliance.
+alfheim.page.fenrirDrop2=&1Skoll's Bane&0 is a relic that shines with the power of the sun. Its whole essence is permeated with deathly fiery rays, that pierce the undead with double the force. Their blazing fire engulfing enemies, draining their vitality and burning them to their very core. One who wields the Skoll's Bane becomes an invincible paladin of light, capable of blinding villains with its divine brilliance.
 alfheim.page.fenrirDrop3=&1Howling Charm&0 is a relic whose wearer gains the power of pack leader. When activated, the sound of a howling wolf pierces the air, causing enemies to stop and listen intently. At this moment, the magic of the Howling Charm fills their hearts with fear of merciless power and determination, striking their bodies from the inside.
 alfheim.page.fenrirDrop4=&1Wolf's Blood Potion&0 is a potion once made by the most powerful shamans. The user of this potion becomes a deadly hunter, gaining the speed and grace of a wolf. His blows become powerful and accurate, enhanced by the fury of a wild beast, and his jumps are as light and incredible as those of the most cunning and agile wolf.
-alfheim.page.fenrirDrop5=&1Fenrisulfr's Heart&0 is a relic that possesses the divine power of the greatest wolf itself. Its rhythmic pulsations fill the owner with strength and restorative energy. It will give him not only accelerated regeneration and physical protection, but also increase his outgoing damage to unprecedented heights. The owner of this heart becomes a living stronghold of unstoppable stamina, able to endure any trials and overcome any obstacles.
+alfheim.page.fenrirDrop5=&1Fenrisulfr's Heart&0 is a relic that possesses the divine power of the greatest wolf itself. Its rhythmic pulsations fill the owner with strength and restorative energy. It will give him not only accelerated regeneration and physical protection, but also increase his outgoing damage to unprecedented heights. The owner of this heart becomes a living stronghold of unstoppable force.
