@@ -555,6 +555,7 @@ alfheim.tagline.soulSword=Не хуже клинка Мурамасы
 alfheim.page.soulSword0=Терралезвие - отличное оружие, острое и прочное, но имеет большой недостаток... Оно ограничивает природный дар живых существ к саморазвитию. К счастью, божественная сущность может кардинально преобразить основной материал терралезвия - террасталь, породив оружие бесконечного потенциала.
 alfheim.page.soulSword1=Слияние террастали – металла, символизирующего первородный Мидгард, и слитков духа Гайи – сущности великой силы, рождает клинок, поглощающий души жертв и усиливающийся ими.
 alfheim.page.soulSword2=Создание &1меча душ&0
+alfheim.page.soulSword3=Чтобы его починить, достаточно нажать Шифт+ПКМ с &1духом Гайи&0 в инвентаре.
 
 alfheim.entry.goddessCharm=Талисман доброжелательной богини
 alfheim.tagline.goddessCharm=Защищает мир от взрывов
@@ -1051,9 +1052,9 @@ alfheim.page.fenrir6=&1Лапы Фенрира&0
 # Сгенерировано ChatGPT, с небольшими правками
 alfheim.entry.fenrirDrop=Фенрировы дары
 alfheim.tagline.fenrirDrop=Награды победителю
-alfheim.page.fenrirDrop0=&1Великий волк одарит героя своими дарами и не будет никого сильнее... Каждая из этих реликвий является свидетельством силы и древности Фенрира, великого волка, олицетворяющего непобедимость и мощь. Тот, кто владеет ими, получает возможность стать воплощением самой суровой ярости природы и непревзойденного мастерства в битве.
+alfheim.page.fenrirDrop0=Великий волк одарит героя своими дарами и не будет никого сильнее... Каждая из этих реликвий является свидетельством силы и древности Фенрира, великого волка, олицетворяющего непобедимость и мощь. Тот, кто владеет ими, получает возможность стать воплощением самой суровой ярости природы и непревзойденного мастерства в битве.
 alfheim.page.fenrirDrop1=&1Глаз Хати&0 - ослепляющий лунный свет, который излучает эта реликвия, пробивает мрак ночи, освещая тёмные уголки и тайные тропы. Её лучи встречаются с глазами врагов, лишая их видения и обрекая на безысходное брожение в темноте. Владелец этой реликвии становится олицетворением света, непроницаемым для теней и безмолвным охотником во мраке.
-alfheim.page.fenrirDrop2=&1Проклятье Сколль&0 - реликвия, сияющая мощью солнца. Вся её сущность пронизана огненными лучами, способными разжечь жизнь даже в самых пустынных сердцах. Лучи Сколль пронзают нежить с вдвое большей силой, их пылающий огонь охватывает врагов, истощая их жизненные силы и выжигая до самого основания. Тот, кто владеет Проклятьем Сколль, становится непобедимым паладином света, способным ослепить злодеев своим божественным блеском.
+alfheim.page.fenrirDrop2=&1Проклятье Сколль&0 - реликвия, сияющая мощью солнца. Вся её сущность пронизана смертоносными огненными лучами, что пронзают нежить с вдвое большей силой. Их пылающий огонь охватывает врагов, истощая их жизненные силы и выжигая до самого основания. Тот, кто владеет Проклятьем Сколль, становится непобедимым паладином света, способным ослепить злодеев своим божественным блеском.
 alfheim.page.fenrirDrop3=&1Воющий талисман&0 - реликвия, носитель которой получает власть вожака стаи. При его активации, звук воющего волка пронзает воздух, заставляя врагов остановиться и внимательно прислушаться. В этот момент магия воющего талисмана наполняет их сердца страхом перед беспощадной мощью и решимостью, поражая их тела изнутри.
 alfheim.page.fenrirDrop4=&1Зелье волчьей крови&0 - зелье, которое когда-то вырабатывали самые могущественные шаманы. Владелец этого зелья становится смертоносным охотником, обретая скорость и грацию волка. Его удары становятся мощными и точными, усиленные яростью дикого зверя, а прыжки столь же легки и невероятны, как у самого хитрого и проворного волка.
-alfheim.page.fenrirDrop5=&1Сердце Фенрира&0 - реликвия, которая обладает божественной силой самого великого волка. Её ритмичные пульсации наполняют владельца силой и восстановительной энергией. Сердце Фенрира подарит ему не только ускоренную регенерацию и физическую защиту, но и увеличит его исходящий урон до невиданных высот. Владелец этого сердца становится живым оплотом неудержимой стойкости, способным вынести любые испытания и преодолеть любые преграды.
+alfheim.page.fenrirDrop5=&1Сердце Фенрира&0 - реликвия, которая обладает божественной силой самого великого волка. Её ритмичные пульсации наполняют владельца силой и восстановительной энергией. Сердце Фенрира подарит ему не только ускоренную регенерацию и физическую защиту, но и увеличит его исходящий урон до невиданных высот. Владелец этого сердца становится живым оплотом неудержимой силы.
